 * Add support for CHECK constraint in SQLite producer (GH#57)
 * Add support for CHECK constraint in POD producer (GH#63)
 * Fix forgotten quoting in the MySQL DROP TABLE diff producer (GH#50)
 * Fix Pg grammar parsing of UUID, time, timetz columns (RT#100196, GH#52)
 * Add support for USING and WHERE on indexes in PostgreSQL producer
   and parser (RT#63814, GH#52)
 * Improve add_trigger consistency between producers (GH#48)
 * Declare dependencies in deterministic order (RT#102859)
 * Multiple speedups of naive internal debugging mechanism (GH#54)
 * Remove dependency on List::MoreUtils ( http://is.gd/lmu_cac_debacle )
 * Fix parsing of strings with leading whitespace for MySQL, Oracle, PostgreSQL,
   SQLServer and SQLite
 * Fix parsing of MySQL column comments (RT#83380)
 * Fix multi-line comments in YAML, JSON and PostgreSQL producers
 * Fix identifier quoting in PostgreSQL diff producer
 * Fix incorrect type conversion from various BigInt AutoIncrement to the
   PostgreSQL-specific bigserial (GH#72)
 * Fix missing semicolons between PostGIS statements
 * Fix string and identifier quoting in PostGIS statements
 * Fix intermittent test failures (RT#108460)

0.11021 2015-01-29

 * Fix Oracle producer generating an unnecessary / at the end in case there
   are no triggers
 * Skip HTML tests if CGI is not installed (RT#98027)
 * Fix JSON and YAML tests if the defaults have been tweaked (RT#98824)
 * Fixes for parsing and producing identifiers and values that need
   quoting and escaping for SQLite, MySQL, PostgreSQL, SQLServer and
   Oracle (RT#90700, RT#31034)
 * Add support for ALTER TABLE ... ADD CONSTRAINT to Oracle parser
 * Add trigger support to Oracle parser (RT#62927)
 * Fix erroneous PostgreSQL floating point type translations (RT#99725)
 * Remove executable bit from Parser/JSON.pm (RT#100532)
 * Update the Free Software Foundation's address (RT#100531)
 * Provide default index names for SQLite (GH#45)
 * Fix SQLite diffing on perl 5.8.1