@@ -7,6 +7,7 @@ Changes for SQL::Translator
  * Fix Pg grammar parsing of UUID, time, timetz columns (RT#100196, GH#52)
  * Add support for USING and WHERE on indexes in PostgreSQL producer
    and parser (RT#63814, GH#52)
+ * Add support for materialized views in Oracle producer
  * Improve add_trigger consistency between producers (GH#48)
  * Declare dependencies in deterministic order (RT#102859)
  * Multiple speedups of naive internal debugging mechanism (GH#54)
